Add claude code setup

--- a/install
+++ b/install
@@ -22,4 +22,8 @@ echo "=== 🐚 Setting up Zsh ==="
 ./scripts/zsh.sh
 echo
 
+echo "=== 🤖 Installing LLM tools ==="
+./scripts/llm.sh
+echo
+
 echo "✨ Installation complete!"
